--- a/frontend/src/Components/Home.css
+++ b/frontend/src/Components/Home.css
@@ -1,8 +1,26 @@
-/* .page-container{
-    width: 100vw;
-    height: 100vh;
+.page-container {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(15, 23, 43, 0.9), rgba(15, 23, 43, 0.9)),
+    url(../img/bg-hero.jpg);
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
+.footer {
+  position: relative;
+
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+}
+
+/* 
 .cards-list{
     width: 100vw;
     height: fit-content;
