--- a/frontend/src/Components/Items.css
+++ b/frontend/src/Components/Items.css
@@ -1,4 +1,18 @@
+.swiper {
+  width: 100%;
+  height: 100%;
+}
 
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: whitesmoke;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* .card-container {
   height: 300px;
