--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -1,37 +1,12 @@
-.logo-lg {
-  color: blueviolet;
-  font-size: 200px;
-}
+/* .navbar{
+  background-color: #0d0d0d;
+} */
 
 .website-name {
-  color: red;
-  font-size: 22px;
+  color: rgb(255, 183, 0);
+  font-size: 400px;
   text-align: left;
   margin: 10px auto;
-}
-
-.hero-text {
-  font-size: 20px;
-}
-
-.breakfast {
-  position: relative;
-}
-
-.breakfast article {
-  position: inherit;
-}
-
-.breakfast article img {
-  width: 80vw;
-  max-width: 500px;
-}
-
-.breakfast article h1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateY(-50%);
 }
 
 @media screen and (width > 640px) {
@@ -57,29 +32,3 @@
     font-size: 60px;
   }
 }
-/* .navbar{
-    /* width: 100vw;
-    height: 500px;
-    margin: 10px auto; */
-
-/* background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/bg-hero.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover; */
-
-/* display: flex;
-    flex-direction: row; }*/
-
-/* .navbar-logo{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-}
-.navbar-logo h1{
-    font-size: 47px;
-    color: #fff;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-shadow: 2px 2px 5px #000;
-} */
