--- a/frontend/src/Components/Home.css
+++ b/frontend/src/Components/Home.css
@@ -7,14 +7,18 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu {
+  width: 100%;
+  height: fit-content;
 }
 
 .footer {
-  position: relative;
-
-  bottom: 0;
   width: 100%;
-  height: 60px;
+  height: 90px;
   background-color: #333;
   color: #fff;
   padding: 20px;
