--- a/frontend/src/Components/Items.css
+++ b/frontend/src/Components/Items.css
@@ -1,6 +1,8 @@
 .swiper {
   width: 100%;
   height: 100%;
+
+
 }
 
 .swiper-slide {
@@ -9,9 +11,11 @@
   background: whitesmoke;
 
   /* Center slide text vertically */
+/*   
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+
 }
 
 /* .card-container {
