--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,23 +1,3 @@
-* {
-  margin: 0px;
-  padding: 0px;
-}
-
-/* .hero-header {
-  background: linear-gradient(rgba(15, 23, 43, 0.9), rgba(15, 23, 43, 0.9)),
-    url(./img/bg-hero.jpg);
-  background-position: center ;
-  background-repeat: no-repeat;
-  background-size: cover;
-  
-} */
-
-.hero-header img {
-  animation: imgRotate 50s linear infinite;
-}
-
-@keyframes imgRotate {
-  100% {
-    transform: rotate(360deg);
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
