--- a/frontend/src/Pages/Home/home.css
+++ b/frontend/src/Pages/Home/home.css
@@ -1,4 +1,16 @@
-.hero__section{
- height: 50vh;
- width: 100vw;
+
+
+/* h1{
+    background-clip: text;
+    color: transparent;
+    animation: fireMove 0.1s linear infinite;
 }
+
+@keyframes fireMove {
+  0% {
+    background-position: -50% 50%;
+  }
+  100% {
+    background-position: 150% 50%;
+  }
+} */
