--- a/frontend/src/Pages/Home/components/Hero.css
+++ b/frontend/src/Pages/Home/components/Hero.css
@@ -2,8 +2,39 @@
   height: 90vh;
   width: 100%;
 
+  /* background-image: url("../../../images/pexels-pixabay-372882.jpg"); */
+  /* background-size: cover; */
+
+  /* opacity: 0.9; */
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 50px;
+  /* background: #fff; */
+  color: blue;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slide1 {
   background-image: url("../../../images/pexels-pixabay-372882.jpg");
   background-size: cover;
-
   opacity: 0.9;
+  /* position: relative; */
 }
+
+/* .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
