--- a/frontend/src/Pages/Home/components/Hero.css
+++ b/frontend/src/Pages/Home/components/Hero.css
@@ -28,6 +28,9 @@
 .slide1 {
   background-image: url("../../../images/pexels-pixabay-372882.jpg");
   background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-clip: content-box;
 
   /* position: relative; */
 }
