--- a/frontend/src/Pages/Home/components/Hero.css
+++ b/frontend/src/Pages/Home/components/Hero.css
@@ -37,7 +37,11 @@
 
 .slide2 {
   background-image: url("../../../images/s24.jpg");
+
   background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-clip: content-box;
 
   position: relative;
 }
